[package]
name = "rustcan"
version = "0.2.0"
edition = "2021"
authors = ["Lain Iwakura <lain@iwakurahome.ru>"]
description = "A fast port scanner written in Rust, inspired by Nmap and Masscan"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.0"
async-trait = "0.1"
regex = "1.10"
futures = "0.3"
crossbeam-channel = "0.5"
base64 = "0.21"
chrono = "0.4"
ipnetwork = "0.20"
trust-dns-resolver = { version = "0.22", features = ["tokio-runtime"] }
